# platformer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
src/: app.c  app.cpp  app.h  main.cpp
src/gfx/: camera.h  quad.h  renderer.cpp  renderer.h  shader.cpp  shader.h  window.cpp  window.h
src/gfx/shaders/: basic.glsl.hpp  quad.glsl.hpp
src/math/: mat.h  math.h  matvec.h  vec.h
src/util/: io.h  log.cpp  log.h
